# source-warden

./: .envrc  .gitignore  Cargo.toml  LICENSE-MIT  default.nix  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: check.yaml  docker-publish.yaml
docs/: README.md
github-event-receiver/: Cargo.toml
mergeable-compatibility-layer/: Cargo.toml
mergeable-compatibility-layer/src/: configuration.rs
mergeable-compatibility-layer/src/configuration/: actions.rs  basics.rs  error.rs  fail.rs  filter.rs  options.rs  pass.rs  validate.rs
mergeable-compatibility-layer/tests/: all-configurable-elements-test.yaml  integration_test.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  routes.rs
server/src/routes/: event_handler.rs  metrics.rs  ui.rs
server/src/routes/event_handler/: authentication.rs  extractors.rs  remote.rs
service-ui/: Cargo.toml  index.html
service-ui/src/: main.rs
