[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["tracing", "macros"] }
axum-core = "0.4.3"
base64 = "0.21.7"
bytes = "1.5.0"
envious = "0.2.2"
futures-util = "0.3.30"
hex = "0.4.3"
http-body-util = "0.1.0"
hyper = "1.1.0"
jsonwebtoken = "9.2.0"
metrics = { version = "0.22.1", default-features = false }
metrics-exporter-prometheus = { version = "0.13.1", default-features = false }
octocrab = { version = "0.34.1", features = ["hyper-tls"] }
orion = "0.17.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = {version = "0.9.6", features = ["pem"]}
rustls = "0.22.2"
secrecy = { version = "0.8.0", features = ["bytes"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = "0.5.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "local-time"] }

[dev-dependencies]
tracing-test = "0.2.4"
http-body-util = "0.1.0"
